--- a/.gitignore
+++ b/.gitignore
@@ -314,7 +314,7 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 
-# OpenCover UI analysis results
+# OpenCover UI analysis
 OpenCover/
 
 # Azure Stream Analytics local run output 
